# gfp

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  pak_reader.rs  utils.rs
src/pak_reader/: gfp_v10.rs  gfp_v7.rs
src/utils/: cli.rs  glob_ext.rs
test/avatar/: onreadypak_405399.pak
test/normal/: game_patch_1.32.11.13846.pak
