[package]
name = "gfp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gfp"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
flate2 = "1.1.2"
glob = "0.3.3"
hex = "0.4.3"
pathdiff = "0.2.3"
thiserror = "2.0.16"
uasset = "0.6.0"

[build-dependencies]
cc = "1.2.33"

[dev-dependencies]
tempfile = "3.2"
